{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 3872,
  "lineage": "e22e59e4-b6c8-2c04-e3b4-c3f55f6eb42c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8acea104f4be7f3",
            "arn": "arn:aws:ec2:eu-west-2:412381775336:elastic-ip/eipalloc-0d8acea104f4be7f3",
            "association_id": "eipassoc-0fd74c706c256dfb1",
            "domain": "vpc",
            "id": "eipalloc-0d8acea104f4be7f3",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0d2b45cff0f940e62",
            "private_dns": "ip-172-16-73-218.eu-west-2.compute.internal",
            "private_ip": "172.16.73.218",
            "public_dns": "ec2-18-135-25-164.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.25.164",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "production-EIP",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-EIP",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091f18e98bc129c4e",
            "arn": "arn:aws:ec2:eu-west-2:412381775336:instance/i-0888bdaf8c182293e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0888bdaf8c182293e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Bukasiation's-SSH-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0acc03ae898543c11",
            "private_dns": "ip-172-16-70-82.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.70.82",
            "public_dns": "ec2-35-178-185-52.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.185.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05173bacbd7a7baa4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b2e2cd060b6cbf68"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022250ff7a0a7c4ae",
            "tags": {
              "Environment": "production",
              "Name": "Bastion-Host",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Bastion-Host",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b2e2cd060b6cbf68"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-serv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa938b5c246ef111",
            "arn": "arn:aws:ec2:eu-west-2:412381775336:instance/i-098fd2f1fccaf0a7c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098fd2f1fccaf0a7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "Bukasiation's-SSH-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00a58e49a16fbf930",
            "private_dns": "ip-172-16-70-128.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.70.128",
            "public_dns": "ec2-18-130-137-117.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.137.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09bcbfa5a1fbb32d7",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0b2e2cd060b6cbf68",
              "sg-0fe84438557969ae9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022250ff7a0a7c4ae",
            "tags": {
              "Environment": "production",
              "Name": "Test-Server",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Test-Server",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b2e2cd060b6cbf68",
              "sg-0fe84438557969ae9"
            ]
          },
          "dependencies": [
            "aws_db_instance.project-rds",
            "aws_db_subnet_group.project-rds",
            "aws_efs_access_point.tooling",
            "aws_efs_file_system.project-efs",
            "aws_kms_key.project-kms",
            "aws_security_group.bastion-sg",
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:internet-gateway/igw-00d2b70d09526c39e",
            "id": "igw-00d2b70d09526c39e",
            "owner_id": "412381775336",
            "tags": {
              "Environment": "production",
              "Name": "Production-VPC-IGW",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Production-VPC-IGW",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:loadbalancer/app/ext-alb/e2e63bc33f28e69b",
            "arn_suffix": "app/ext-alb/e2e63bc33f28e69b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ext-alb-1573351467.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:loadbalancer/app/ext-alb/e2e63bc33f28e69b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03b0350d432de8383"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-022250ff7a0a7c4ae"
              },
              {
                "subnet_id": "subnet-0699e30c29bc87e44"
              }
            ],
            "subnets": [
              "subnet-022250ff7a0a7c4ae",
              "subnet-0699e30c29bc87e44"
            ],
            "tags": {
              "Environment": "production",
              "Name": "ext-alb",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ext-alb",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "vpc_id": "vpc-083b2309153c374d3",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "int-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:loadbalancer/app/int-alb/a95d1709074f77f5",
            "arn_suffix": "app/int-alb/a95d1709074f77f5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-int-alb-1759164133.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:loadbalancer/app/int-alb/a95d1709074f77f5",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "int-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-010e443cc021c7fed"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b6d6f9a61dc493f9"
              },
              {
                "subnet_id": "subnet-0df3d9cbb64fab087"
              },
              {
                "subnet_id": "subnet-0f79c333cf01a648c"
              }
            ],
            "subnets": [
              "subnet-0b6d6f9a61dc493f9",
              "subnet-0df3d9cbb64fab087",
              "subnet-0f79c333cf01a648c"
            ],
            "tags": {
              "Environment": "production",
              "Name": "int-alb",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "int-alb",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "vpc_id": "vpc-083b2309153c374d3",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ext-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:listener/app/ext-alb/e2e63bc33f28e69b/7dfedfa2c329258d",
            "certificate_arn": "arn:aws:acm:eu-west-2:412381775336:certificate/885c9ff5-ac20-4e0c-9d2b-268c26779da3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:targetgroup/nginx-tgt/fe568f93338d150f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:listener/app/ext-alb/e2e63bc33f28e69b/7dfedfa2c329258d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:loadbalancer/app/ext-alb/e2e63bc33f28e69b",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.project_cert",
            "aws_lb.ext-alb",
            "aws_lb_target_group.nginx-tgt",
            "aws_route53_zone.project_zone",
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "int-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:listener/app/int-alb/a95d1709074f77f5/18772b54ccfb10b5",
            "certificate_arn": "arn:aws:acm:eu-west-2:412381775336:certificate/885c9ff5-ac20-4e0c-9d2b-268c26779da3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:targetgroup/wordpress-tgt/666e87eddc8e252d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:listener/app/int-alb/a95d1709074f77f5/18772b54ccfb10b5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:loadbalancer/app/int-alb/a95d1709074f77f5",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.project_cert",
            "aws_lb.int-alb",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_zone.project_zone",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:targetgroup/tooling-tgt/3eaac93e92fa9eed",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:listener-rule/app/int-alb/a95d1709074f77f5/18772b54ccfb10b5/c8d9d0bfce6a6fb5",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.kosenuel.ip-ddns.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:listener-rule/app/int-alb/a95d1709074f77f5/18772b54ccfb10b5/c8d9d0bfce6a6fb5",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:listener/app/int-alb/a95d1709074f77f5/18772b54ccfb10b5",
            "priority": 99,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.project_cert",
            "aws_lb.int-alb",
            "aws_lb_listener.int-alb-listener",
            "aws_lb_target_group.tooling-tgt",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_zone.project_zone",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:targetgroup/nginx-tgt/fe568f93338d150f",
            "arn_suffix": "targetgroup/nginx-tgt/fe568f93338d150f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 7
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:targetgroup/nginx-tgt/fe568f93338d150f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:412381775336:loadbalancer/app/ext-alb/e2e63bc33f28e69b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tgt",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "nginx-tgt",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nginx-tgt",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:targetgroup/tooling-tgt/3eaac93e92fa9eed",
            "arn_suffix": "targetgroup/tooling-tgt/3eaac93e92fa9eed",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 7
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:targetgroup/tooling-tgt/3eaac93e92fa9eed",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:412381775336:loadbalancer/app/int-alb/a95d1709074f77f5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tooling-tgt",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "tooling-tgt",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "tooling-tgt",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:targetgroup/wordpress-tgt/666e87eddc8e252d",
            "arn_suffix": "targetgroup/wordpress-tgt/666e87eddc8e252d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 7
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:412381775336:targetgroup/wordpress-tgt/666e87eddc8e252d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:412381775336:loadbalancer/app/int-alb/a95d1709074f77f5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-tgt",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "wordpress-tgt",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "wordpress-tgt",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8acea104f4be7f3",
            "association_id": "eipassoc-0fd74c706c256dfb1",
            "connectivity_type": "public",
            "id": "nat-0e5b930262f079772",
            "network_interface_id": "eni-0d2b45cff0f940e62",
            "private_ip": "172.16.73.218",
            "public_ip": "18.135.25.164",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-022250ff7a0a7c4ae",
            "tags": {
              "Environment": "production",
              "Name": "production-NAT-Gateway",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-NAT-Gateway",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00d2b70d09526c39e",
            "id": "r-rtb-06fb64faf021196221080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06fb64faf02119622",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:route-table/rtb-06b6cb55d133fc34b",
            "id": "rtb-06b6cb55d133fc34b",
            "owner_id": "412381775336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e5b930262f079772",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "production-Private-Route-Table",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-Private-Route-Table",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:route-table/rtb-06fb64faf02119622",
            "id": "rtb-06fb64faf02119622",
            "owner_id": "412381775336",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d2b70d09526c39e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "production-Public-Route-Table",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-Public-Route-Table",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c91ea192aca878e",
            "route_table_id": "rtb-06b6cb55d133fc34b",
            "subnet_id": "subnet-0f79c333cf01a648c"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0307a2616a95b4592",
            "route_table_id": "rtb-06b6cb55d133fc34b",
            "subnet_id": "subnet-0df3d9cbb64fab087"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca89446c783aa9fb",
            "route_table_id": "rtb-06b6cb55d133fc34b",
            "subnet_id": "subnet-0b6d6f9a61dc493f9"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a373ef9e4a506647",
            "route_table_id": "rtb-06b6cb55d133fc34b",
            "subnet_id": "subnet-0986c2d9e5f76b4c8"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0828e1fbc4915c6b6",
            "route_table_id": "rtb-06fb64faf02119622",
            "subnet_id": "subnet-022250ff7a0a7c4ae"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b24ec418e2c8c4f4",
            "route_table_id": "rtb-06fb64faf02119622",
            "subnet_id": "subnet-0699e30c29bc87e44"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:security-group/sg-0b2e2cd060b6cbf68",
            "description": "Security group for Bastion Host Secure Shell (SSH) access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2e2cd060b6cbf68",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from the internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "412381775336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "bastion-sg",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "bastion-sg",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:security-group/sg-09d2a9ba50800b8d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d2a9ba50800b8d9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from Bastion Host",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b2e2cd060b6cbf68"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from Webserver",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fe84438557969ae9"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow NFS traffic from Webserver",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fe84438557969ae9"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "412381775336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "datalayer-sg",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "datalayer-sg",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:security-group/sg-03b0350d432de8383",
            "description": "Allow HTTP/HTTPS/SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b0350d432de8383",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from the internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from the internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "412381775336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "ext-alb-sg",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ext-alb-sg",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:security-group/sg-010e443cc021c7fed",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010e443cc021c7fed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de819c0b378bf1bf"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "int-alb-sg",
            "name_prefix": "",
            "owner_id": "412381775336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "int-alb-sg",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "int-alb-sg",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:security-group/sg-0de819c0b378bf1bf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de819c0b378bf1bf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b2e2cd060b6cbf68"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b0350d432de8383"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "412381775336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "nginx-sg",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "nginx-sg",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:security-group/sg-0fe84438557969ae9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe84438557969ae9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from bastion Security group for testing purposes",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-010e443cc021c7fed",
                  "sg-0b2e2cd060b6cbf68"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS traffic from Internal ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-010e443cc021c7fed"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow SSH traffic from Bastion Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b2e2cd060b6cbf68"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "412381775336",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-4233047703",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0de819c0b378bf1bf",
            "security_group_rule_id": "sgr-0596ee6d61646061f",
            "self": false,
            "source_security_group_id": "sg-0b2e2cd060b6cbf68",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3901597366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-010e443cc021c7fed",
            "security_group_rule_id": "sgr-01d1a5f26bf2484c4",
            "self": false,
            "source_security_group_id": "sg-0de819c0b378bf1bf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow MySQL traffic from Bastion Host",
            "from_port": 3306,
            "id": "sgrule-2930887249",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d2a9ba50800b8d9",
            "security_group_rule_id": "sgr-0d6380b87d084f85a",
            "self": false,
            "source_security_group_id": "sg-0b2e2cd060b6cbf68",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow MySQL traffic from Webserver",
            "from_port": 3306,
            "id": "sgrule-4288050767",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d2a9ba50800b8d9",
            "security_group_rule_id": "sgr-0e3d5b88ce10707a2",
            "self": false,
            "source_security_group_id": "sg-0fe84438557969ae9",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow NFS traffic from Webserver",
            "from_port": 2049,
            "id": "sgrule-1817241285",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09d2a9ba50800b8d9",
            "security_group_rule_id": "sgr-0f3d3e7fd7ad75209",
            "self": false,
            "source_security_group_id": "sg-0fe84438557969ae9",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-337829798",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0de819c0b378bf1bf",
            "security_group_rule_id": "sgr-08c6c70aa6c0d1174",
            "self": false,
            "source_security_group_id": "sg-03b0350d432de8383",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP traffic from bastion Security group for testing purposes",
            "from_port": 80,
            "id": "sgrule-721414371",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fe84438557969ae9",
            "security_group_rule_id": "sgr-04202d2710340f065",
            "self": false,
            "source_security_group_id": "sg-0b2e2cd060b6cbf68",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-http-intAlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTP traffic from bastion Security group for testing purposes",
            "from_port": 80,
            "id": "sgrule-1315459729",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fe84438557969ae9",
            "security_group_rule_id": "sgr-03253e08c624b9cde",
            "self": false,
            "source_security_group_id": "sg-010e443cc021c7fed",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS traffic from Internal ALB",
            "from_port": 443,
            "id": "sgrule-2167319710",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fe84438557969ae9",
            "security_group_rule_id": "sgr-0b8a6174e1412b39a",
            "self": false,
            "source_security_group_id": "sg-010e443cc021c7fed",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH traffic from Bastion Host",
            "from_port": 22,
            "id": "sgrule-3217127147",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fe84438557969ae9",
            "security_group_rule_id": "sgr-0cf7fe068ef23b7eb",
            "self": false,
            "source_security_group_id": "sg-0b2e2cd060b6cbf68",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:subnet/subnet-0f79c333cf01a648c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f79c333cf01a648c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412381775336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Private-Subnet-1",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Private-Subnet-1",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:subnet/subnet-0df3d9cbb64fab087",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df3d9cbb64fab087",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412381775336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Private-Subnet-2",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Private-Subnet-2",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:subnet/subnet-0b6d6f9a61dc493f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "172.16.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6d6f9a61dc493f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412381775336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Private-Subnet-3",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Private-Subnet-3",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:subnet/subnet-0986c2d9e5f76b4c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0986c2d9e5f76b4c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412381775336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Private-Subnet-4",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Private-Subnet-4",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:subnet/subnet-022250ff7a0a7c4ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022250ff7a0a7c4ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412381775336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Public-Subnet-1",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Public-Subnet-1",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:subnet/subnet-0699e30c29bc87e44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.16.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0699e30c29bc87e44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412381775336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "Public-Subnet-2",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Public-Subnet-2",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "vpc_id": "vpc-083b2309153c374d3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:412381775336:vpc/vpc-083b2309153c374d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0c69c832c1ca3d6fb",
            "default_route_table_id": "rtb-00d91f4d386d0c4da",
            "default_security_group_id": "sg-0447ca12ef1262d9e",
            "dhcp_options_id": "dopt-05f965a184964a6be",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-083b2309153c374d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d91f4d386d0c4da",
            "owner_id": "412381775336",
            "tags": {
              "Environment": "production",
              "Name": "Production-VPC",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Production-VPC",
              "Owner": "Emmanuel@kosenuel.com",
              "Project": "PBL",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}